--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,12 @@ ol {
 /*---------------------
 Helper CSS
  -----------------------*/
-
+.myshow{
+	display: block;
+}
+.myhide{
+	display: none;
+}
 .section-title {
 	text-align: center;
 }
